--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -48,6 +48,11 @@ input,
 button,
 textarea {
   font: 500 1.6rem Poppins;
+  color: var(--color-text-base);
+}
+
+button {
+  cursor: pointer;
 }
 
 .container {
