--- a/web/src/components/PageHeader/styles.css
+++ b/web/src/components/PageHeader/styles.css
@@ -38,3 +38,29 @@
   font: 700 3.6rem Archivo;
   color: var(--color-title-in-primary);
 }
+
+@media (min-width: 700px) {
+  .page-header {
+    height: 340px;
+  }
+
+  .page-header .top-bar-container {
+    max-width: 1100px;
+  }
+
+  .page-header .header-content {
+    flex: 1;
+    margin: 0 auto;
+    max-width: 740px;
+    padding-bottom: 48px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
+  .page-header .header-content strong {
+    max-width: 350px;
+  }
+}
